layout bugs

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -39,14 +39,14 @@ body {
 /* 热点 */
 .hotspot {
   position: absolute;
-  width: 6%;
-  height: 10%;
-  background: rgba(255, 0, 0, 0.3);
-  border: none;
+  width: 17%;
+  height: 70%;
+  /* background: rgba(255, 0, 0, 0.3); */
+  /* border: none; */
   cursor: pointer;
   transition: 0.2s;
 }
 
-.hotspot:hover {
+/* .hotspot:hover {
   background: rgba(255, 0, 0, 0.6);
-}
+} */
